add_subdirectory(callback)
add_subdirectory(callback_create_delete_node)
add_subdirectory(changescene)
add_subdirectory(character)
add_subdirectory(character_remove)
add_subdirectory(character_resize)
add_subdirectory(cooked)
add_subdirectory(invalidscene)
add_subdirectory(multiscene)
add_subdirectory(physicsscene)
